--- a/MicroArcSec.Client/Pages/Charts.razor
+++ b/MicroArcSec.Client/Pages/Charts.razor
@@ -1,189 +1,111 @@
 ﻿@page "/charts"
+@using MicroArcSec.Client.Classes;
+@using Microsoft.AspNetCore.SignalR.Client;
 
-<PageTitle>Charts</PageTitle>
+@inject NavigationManager Navigation
+@inject HubConnection HubConnection
+
+
 
 <h1>Charts</h1>
 
-<GridRow>
-    <GridCol Span="8">
-        <RadzenChart>
-            <RadzenColumnSeries Data="@revenue" CategoryProperty="Quarter" ValueProperty="Revenue" />
-            <RadzenValueAxis Min="0" Max="400000" Step="100000" />
-        </RadzenChart>
-    </GridCol>
-    <GridCol Span="8">
-        <RadzenChart>
-            <RadzenColumnSeries Data="@revenue" CategoryProperty="Quarter" ValueProperty="Revenue" />
-            <RadzenValueAxis>
-                <RadzenGridLines Visible="true" />
-            </RadzenValueAxis>
-            <RadzenCategoryAxis>
-                <RadzenGridLines Visible="true" />
-            </RadzenCategoryAxis>
-        </RadzenChart>
-    </GridCol>
-    <GridCol Span="8">
-        <Bar Data="data" Config="barConfig" />
-    </GridCol>
-</GridRow>
-<GridRow>
-    <GridCol Span="8">
-        <Line Data="data" Config="lineConfig" />
-    </GridCol>
-    <GridCol Span="8">
-        <Pie Data="data1" Config="config1" />
-    </GridCol>
-    <GridCol Span="8"></GridCol>
-</GridRow>
+@if (statusData is null || !statusData.Any())
+{
+    <p>Loading...</p>
+}
+else
+{
+    <GridRow>
+        <GridCol Span="8">
+            <RadzenChart>
+                <RadzenDonutSeries Title="Status" Data="@statusData" CategoryProperty="Type" ValueProperty="Value">
+                    <ChildContent>
+                        <RadzenSeriesDataLabels Visible="true" />
+                    </ChildContent>
+                    <TitleTemplate>
+                        <div class="rz-donut-content">
+                            <div>Status</div>
+                        </div>
+                    </TitleTemplate>
+                </RadzenDonutSeries>
+            </RadzenChart>            
+        </GridCol>
+        <GridCol Span="8">
+            <RadzenChart>
+                <RadzenDonutSeries Title="Level" Data="@levelData" CategoryProperty="Type" ValueProperty="Value">
+                    <ChildContent>
+                        <RadzenSeriesDataLabels Visible="true" />
+                    </ChildContent>
+                    <TitleTemplate>
+                        <div class="rz-donut-content">
+                            <div>Level</div>
+                        </div>
+                    </TitleTemplate>
+                </RadzenDonutSeries>
+            </RadzenChart>
+        </GridCol>
+    </GridRow>
+     <GridRow>
+        <GridCol Span="8">
+            <RadzenChart>
+                <RadzenColumnSeries Title="Logs per day" Data="@logsPerDayData" CategoryProperty="Type" ValueProperty="Value" />
+                <RadzenValueAxis Min="0" Max="5" Step="1" />
+            </RadzenChart>
+        </GridCol>
+    </GridRow>
+}
+
 
 @code {
-    class DataItem
+    public class DataItem
     {
-        public string Quarter { get; set; }
-        public double Revenue { get; set; }
+        public string? Type { get; set; }
+        public double? Value { get; set; }
+        public DateTime? Date { get; set; }
     }
 
-    DataItem[] revenue = new DataItem[]
-    {
-      new DataItem { Quarter = "Q1", Revenue = 234000 },
-      new DataItem { Quarter = "Q2", Revenue = 284000 },
-      new DataItem { Quarter = "Q3", Revenue = 274000 },
-      new DataItem { Quarter = "Q4", Revenue = 294000 }
-    };
+    [Parameter]
+    public DataItem[] statusData { get; set; }
 
-    readonly BarConfig config2 = new BarConfig
-        {
-            Title = new AntDesign.Charts.Title
-            {
-                Visible = true,
-                Text = "Demo"
-            },
-            AutoFit = true,
-            XField = "Time",
-            YField = "Quantity",
-            Label = new BarViewConfigLabel
-            {
-                Visible = true
-            }
-        };
+    [Parameter]
+    public DataItem[] levelData { get; set; }
 
-    object[] data = new object[] {
-        new  { year= "1991", value= 3 },
-        new  { year= "1992", value= 4 },
-        new  { year= "1993", value= 3.5 },
-        new  { year= "1994", value= 5 },
-        new  { year= "1995", value= 4.9 },
-        new  { year= "1996", value= 6 },
-        new  { year= "1997", value= 7 },
-        new  { year= "1998", value= 9 },
-        new  { year= "1999", value= 13 },
-};
-
-    BarConfig barConfig = new BarConfig()
-        {
-            Padding = "auto",
-            AutoFit = true,
-            XField = "year",
-            YField = "value",
-        };
-
-    LineConfig lineConfig = new LineConfig()
-        {
-            Padding = "auto",
-            AutoFit = true,
-            XField = "year",
-            YField = "value",
-        };
-
-    readonly GaugeConfig gaugeConfig = new GaugeConfig
-        {
-            Title = new AntDesign.Charts.Title
-            {
-                Visible = true,
-                Text = "刻度仪表盘"
-            },
-            Width = 400,
-            Height = 400,
-            Data = 40,
-            Min = 0,
-            Max = 100,
-            Range = new double[] { 0, 25, 50, 75, 100 },
-
-
-            Statistic = new GaugeStatistic
-            {
-                Visible = true,
-                Text = "良",
-                Color = "#faad14",
-            },
-            Color = new[] { "#39B8FF", "#52619B", "#43E089", "#C0EDF3" },
-        };
-
-    readonly LiquidConfig liquidConfig = new LiquidConfig
-        {
-            Min = 0,
-            Max = 10000,
-            Percent = 5639
-        };
-
-    object[] data3 = new object[49];
+    [Parameter]
+    public DataItem[] logsPerDayData { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
-        for (int i = 1; i < 50; i++)
-        {
-            Random rd = new Random();
-            data3[i - 1] = new { type = $"分类 {i}", value = rd.Next(0, 10) + 1 };
-        }
+        HubConnection = new HubConnectionBuilder()
+            .WithUrl(Navigation.ToAbsoluteUri("/FileReceiverHub"))
+            .Build();
+        HubConnection.On<string>("ReceiveFile", OnReceiveMessage);
+        await HubConnection.StartAsync();
+
+        await LoadData();
 
         await base.OnInitializedAsync();
 
     }
 
-    readonly object[] data1 =
+    private async Task LoadData()
     {
-        new
-        {
-            type = "Category One",
-            value = 27
-        },
-        new
-        {
-            type = "Category Two",
-            value = 25
-        },
-        new
-        {
-            type = "Category Three",
-            value = 18
-        },
-        new
-        {
-            type = "Category Four",
-            value = 15
-        },
-        new
-        {
-            type = "Category Five",
-            value = 10
-        },
-        new
-        {
-            type = "Other",
-            value = 5
-        }
-    };
+        var rules = await Tools.GetAllRules();
 
-    readonly PieConfig config1 = new PieConfig
-        {
-            AutoFit = true,
-            Radius = 0.8,
-            AngleField = "value",
-            ColorField = "type",
-            Label = new PieLabelConfig
-            {
-                Visible = true,
-                Type = "inner"
-            }
-        };
+        statusData = rules.GroupBy(x => x.status)
+                .Select(g => new DataItem { Type = g.Key, Value = g.Count() }).ToArray();
+
+        levelData = rules.GroupBy(x => x.detection.level)
+                .Select(g => new DataItem{ Type = g.Key, Value = g.Count() }).ToArray();
+
+        logsPerDayData = rules.Where(x => x.date.HasValue)
+              .GroupBy(x => x.date.Value.Date)
+              .Select(g => new DataItem { Type = g.Key.ToString("MMMM dd"), Value = g.Count(), Date = g.Key })
+              .OrderBy(x => x.Date).ToArray();
+    }
+
+    private async Task OnReceiveMessage(string fileName)
+    {
+        await LoadData();
+        await InvokeAsync(StateHasChanged);
+    }
 }
